codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_note_view__tests__feedback_view_bug.snap
---
source: tui/src/bottom_pane/feedback_note_view_tests.rs
assertion_line: 93
expression: rendered
---
▌ Tell us more (bug)
▌
▌ Your feedback can be used to improve ChatGPT. Learn more.
▌
▌ (optional) Write a short description to help us further

enter to submit · esc to cancel
