codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_note_view__tests__feedback_view_constrained_multiline.snap
---
source: tui/src/bottom_pane/feedback_note_view_tests.rs
expression: "render_buffer(area, &buf)"
---
▌
▌ ten
enter to submit · esc to cancel
