codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_note_view__tests__feedback_view_safety_check.snap
---
source: tui/src/bottom_pane/feedback_note_view_tests.rs
expression: rendered
---
▌ Tell us more (safety check)
▌
▌ Your feedback can be used to improve ChatGPT. Learn more.
▌
▌ (optional) Share what was refused and why it should have b

enter to submit · esc to cancel
